# lp-registration-service

./: .gitignore  README.md  app.db  app.py  db.py  pyproject.toml  req.txt  Без имени 1
app/: __init__.py  config.py  date_cheker.py  forms.py  models.py
app/templates/: 404.html  500.html  base.html  check_date.html  index.html  login.html
scripts/: data.json  db_commands.py  read_json.py
templates/: base.html
