[tool.poetry]
name = "Registration-services"
version = "0.1.0"
description = "Service to registrate user on date and time"
authors = ["Viktor Butovchenko <vbutovchenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.15.0"
psycopg2-binary = "^2.8.6"
Flask-WTF = "^0.14.3"
WTForms = "^2.3.3"
Flask-Login = "^0.5.0"
requests = "^2.25.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
